Restrict API key file permissions